style: fixed color of scrollbar

--- a/css/global.css
+++ b/css/global.css
@@ -13,7 +13,7 @@ a {
 }
 
 body {
-  --sb-track-color: #232E33;
+  --sb-track-color: #419176;
   --sb-thumb-color: #f1ca55;
   --sb-size: 14px;
 }
